--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -1,13 +1,13 @@
 ---
 # yaml-language-server: $schema=https://schema.blue-build.org/recipe-v1.json
 # image will be published to ghcr.io/<user>/<name>
-name: budgie-os
+name: bridge-os
 # description will be included in the image's metadata
-description: This is my personal OS image.
+description: A safe crossing from Windows to something better.
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/silverblue-main
-image-version: 41 # latest is also supported if you want new updates ASAP
+base-image: ghcr.io/ublue-os/budgie-atomic-main
+image-version: latest # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
@@ -23,6 +23,11 @@ modules:
     install:
       - micro
       - starship
+      - gnome-software
+      - gnome-software-plugin-flatpak
+      - curl
+      - neovim
+      - fish
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
@@ -34,11 +39,15 @@ modules:
     system:
       # If no repo information is specified, Flathub will be used by default
       install:
-        - org.mozilla.firefox
+        - org.gnome.Epiphany
+        - org.gnome.World.Secrets
         - org.gnome.Loupe
+        - org.gnome.Crosswords
+        - org.gnome.Mahjongg
+        - com.github.hugolabe.Wike
+        - com.github.tchx84.Flatseal
       remove:
         - org.gnome.eog
     user: {} # Also add Flathub user repo, but no user packages
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
-
