--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -1,13 +1,11 @@
 ---
 # yaml-language-server: $schema=https://schema.blue-build.org/recipe-v1.json
-# image will be published to ghcr.io/<user>/<name>
 name: bridge-os
 # description will be included in the image's metadata
 description: A safe crossing from Windows to something better.
 
-# the base image to build on top of (FROM) and the version tag to use
 base-image: ghcr.io/ublue-os/budgie-atomic-main
-image-version: latest # latest is also supported if you want new updates ASAP
+image-version: latest 
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
@@ -23,16 +21,10 @@ modules:
     install:
       - micro
       - starship
-      - gnome-software
-      - gnome-software-plugin-flatpak
-      - curl
-      - neovim
       - fish
     remove:
-      # example: removing firefox (in favor of the flatpak)
-      # "firefox" is the main package, "firefox-langpacks" is a dependency
       - firefox
-      - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
+      - firefox-langpacks 
 
   - type: default-flatpaks
     notify: true # Send notification after install/uninstall is finished (true/false)
@@ -42,12 +34,19 @@ modules:
         - org.gnome.Epiphany
         - org.gnome.World.Secrets
         - org.gnome.Loupe
+        - org.gnome.Geary
         - org.gnome.Crosswords
         - org.gnome.Mahjongg
         - com.github.hugolabe.Wike
         - com.github.tchx84.Flatseal
+        - de.haeckerfelix.Shortwave
+        - page.codeberg.zynequ.Kapitano
       remove:
         - org.gnome.eog
     user: {} # Also add Flathub user repo, but no user packages
+
+  - type: gschema-overrides
+    include:
+      - zz1-budgie.gschema.override
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
