feat: Added icon theme, terminal and file manager

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -24,6 +24,11 @@ modules:
       - fish
       - rsms-inter-fonts
       - jetbrains-mono-fonts
+      - adw-gtk3-theme
+      - papirus-icon-theme
+      - gnome-console
+      - gnome-terminal
+      - nautilus
     remove:
       - firefox
       - firefox-langpacks
